# megatron

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  agenda.html  best_practices.html  communication_patterns.html  main.py  megatron_features.html  mlp_implementation.html  parallel_overview.html  performance_optimization.html  pipeline_parallelism.html  pyproject.toml  ruff.toml  tp_deep_dive.html  what_is_megatron.html
docs/: data_parallelism.html  ptdp_strategy.html  why_megatron.html
docs/pdf_html/: 00_title_slide.html  01_agenda.html  02_what_is_megatron.html  03_why_megatron.html  04_megatron_features.html  05_parallel_overview.html  06_data_parallelism.html  07_pipeline_parallelism.html  08_tensor_parallelism.html  09_sequence_parallelism.html  10_ptdp_strategy.html  11_tp_deep_dive.html  11_tp_deep_dive.html.skipped  12_column_parallel.html  13_row_parallel.html  14_communication_patterns.html  14_communication_patterns.html.skipped  15_attention_implementation.html  16_mlp_implementation.html  17_moe_implementation.html  18_performance_optimization.html  19_best_practices.html
